implementação dos serviços de usuarios
